# rm_pycache

./: .gitignore  README.md  pyproject.toml
src/: rm_pycache.py
