[build-system]
requires = ["poetry-core~=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rm_pycache"
version = "1.0.2"
authors = [
  "rapid537 <rapid537@zoho.com>",
]
description = "Remove all __pycache__ in specified directory"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/rapid537/rm_pycache"
packages = [
    { include = "rm_pycache.py", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
